--- a/newstyle.css
+++ b/newstyle.css
@@ -2,7 +2,7 @@
     display: flex;
     margin-left: 20px;
 }
-.user3{
+.user3,.first,.last,.emailin,.cpwd,.pwd{
     margin-left: 50px;
     border-radius: 10px;
     width: 400px;
